# battery-bot

./: .gitignore  Battery_Scratch.ipynb  LICENSE  README.md  pyproject.toml  solar.py
.github/: CODEOWNERS
battery-bot/: .gitignore  app.py  app_streamlit.py  batteryopt.py  bayou.py  constants.py  palmetto.py  palmetto_explore.py  requirements.txt  solar.py  test_batteryopt.py  utils.py
battery-bot/data/: scenario_data.csv  tmp_fivehundred_rows_noindex.csv  tmp_full_noindex.csv  tmp_half_noindex.csv  tmp_onethousand_noindex.csv  tmp_out.csv  tmp_out_noindex.csv  tmp_out_noindex_short.csv  tmp_quarter_noindex.csv  weather_37.8_-122.4_2019_2021.csv
battery-bot/data/output/: load__ev_False__hvac_False_battery_dispatch.csv  load__ev_False__hvac_True_battery_dispatch.csv  load__ev_True__hvac_False_battery_dispatch.csv  load__ev_True__hvac_True_battery_dispatch.csv  result_stats.csv
battery-bot/data/pge-e78ff14c-c8c0-11ec-8cc7-0200170a3297-DailyUsageData/: pge_electric_usage_interval_data_Service 1_1_2024-02-01_to_2025-01-31.csv  pge_natural_gas_usage_interval_data_Service 2_2_2024-02-01_to_2025-01-31.csv
battery-bot/flagged/: log.csv
battery-bot/flagged/Upload CSV File/e5ffd43d11eb578435a73c0c30538f993c0606fd/: pge_electric_usage_interval_data_Service 1_1_2024-02-01_to_2025-01-31.csv
battery-bot/flagged/output/: tmp0ac38jjt.json
battery-bot/test/: test_batteryopt.py  test_palmetto.py  test_utils.py  utils.py
